--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,8 @@ version = "0.1.0"
 description = "Contract definitions for job scrapper services"
 readme = "README.md"
 requires-python = ">=3.8"
-license = {text = "MIT"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "EvilMangos", email = "maksymkhamets.career@gmail.com"}
 ]
 keywords = ["jobs", "scrapping", "contracts", "interface"]
 classifiers = [
