--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dev = [
     "mypy>=1.18.2",
     "black>=25.9.0",
     "ruff>=0.14.3",
+    "pre-commit>=4.0.1",
 ]
 
 [tool.setuptools.packages.find]
